@@ -2,6 +2,7 @@
 
 	* Fixed bug #9655: Call to t3lib_div::devLog() without key in index_ts.php (thanks to Francois Suter)
 	* Fixed bug #9607: Module DB check uses hardcoded labels (thanks to Christopher Stelmaszyk)
+	* Added feature ##9656: Extend t3lib_div::trimExplode to limit the number of elements
 
 2008-10-24  Oliver Hader  <oliver@typo3.org>
 
